# quickstitch_bin

./: Cargo.toml  README.md
quickstitch_cli/: Cargo.toml
quickstitch_cli/src/: main.rs
quickstitch_gui/: Cargo.toml
quickstitch_gui/src/: main.rs  stitcher.rs
quickstitch_gui/src/gui/: icons.rs  mod.rs  setting_section.rs  simple_screen.rs
quickstitch_gui/src/gui/io_section/: image_file.rs  mod.rs
quickstitch_gui/src/gui/limit_section/: mod.rs  pixel_field.rs
